fixed contact me text overflow

--- a/my-app/src/styles/contact.css
+++ b/my-app/src/styles/contact.css
@@ -194,7 +194,7 @@
   }
 
   .contact-intro-text p {
-    width: 450px;
+    width: 80%;
     margin: 0 auto;
   }
 
